--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
         "dev": "vite"
     },
     "devDependencies": {
+        "@tailwindcss/aspect-ratio": "^0.4.2",
+        "@tailwindcss/forms": "^0.5.10",
+        "@tailwindcss/typography": "^0.5.18",
         "@tailwindcss/vite": "^4.1.11",
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
